--secondary-color has been updated to fix navigation and form background color contrast errors. CSS animation was added to buttons on the home, service page

--- a/hair-salon/css/home.css
+++ b/hair-salon/css/home.css
@@ -25,7 +25,7 @@
         align-items: center;
         position: static;
         box-shadow: none;
-        background-color: transparent;
+        background-color: none;
     }
 
     nav a {
@@ -138,7 +138,7 @@
         width: 35%;
         margin: 0 auto;
         padding: 20px;
-        background-color: var(--accent1-color);
+        background-color: var(--accent3-color);
         border-radius: 20px;
         color: #ffffff;
         display: flex;
